--- a/GoalSetting/app/src/main/res/values/strings.xml
+++ b/GoalSetting/app/src/main/res/values/strings.xml
@@ -12,4 +12,6 @@
     <string name="menu_slideshow">Slideshow</string>
 
     <string name="home_second">Home Second</string>
+
+    <string name="current_value">Current Value:</string>
 </resources>
